--- a/app/templates/main/process.html
+++ b/app/templates/main/process.html
@@ -93,7 +93,7 @@
   </div>
 {% endblock header %}
 {% block content %}
-  <div class="page-container">
+  <div class="page-container" style="padding-top: 5%;">
     <div class="collection">
       <!-- Imagine a loop produced this... -->
       <!-- Product Start-->
@@ -109,7 +109,7 @@
           <p>
             <strong>Greenhouse Construction and Customization</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
           <p><strong>Features:</strong> “High-quality structures tailored to diverse crops, climates, and automation needs.” </p>
         </div>
@@ -128,8 +128,9 @@
           <p>
             <strong>Automated Irrigation System</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
+          <br/>
           <p><strong>Features:</strong> “Optimize water usage with sensor-driven irrigation tailored to real-time soil conditions.” </p>
         </div>
       </div>
@@ -147,8 +148,9 @@
           <p>
             <strong>Humidity and Air Regulation</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
+          <br/>
           <p><strong>Features:</strong> "Real-time control over humidity and ventilation for a balanced greenhouse environment." </p>
         </div>
       </div>
@@ -166,7 +168,7 @@
           <p>
             <strong>Temperature Control and Heating Systems</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
           <p><strong>Features:</strong>  "Automated temperature management for ideal growth conditions in any climate." </p>
         </div>
@@ -185,8 +187,9 @@
           <p>
             <strong>Lighting Automation</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
+          <br/>
           <p><strong>Features:</strong>  "Advanced lighting systems to optimize growth cycles and plant development." </p>
         </div>
       </div> 
@@ -195,7 +198,7 @@
       <div class="product">
         <a class="product__image" href="#"><img
           class="about-image"
-          src="{{ url_for('static', filename='img/solarpanel.avif') }}"
+          src="{{ url_for('static', filename='img/solar.avif') }}"
           alt="#"
           width="550"
           height="400"
@@ -204,7 +207,7 @@
           <p>
             <strong>Energy-Efficient Power Management</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
           <p><strong>Features:</strong>  "Renewable energy solutions to reduce costs and environmental impact." </p>
         </div>
@@ -223,7 +226,7 @@
           <p>
             <strong>Pest and Disease Monitoring Systems</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
           <p><strong>Features:</strong>  "Early detection of pests and diseases with automated control measures." </p>
         </div>
@@ -242,7 +245,7 @@
           <p>
             <strong>Maintenance and Support Services</strong>
           </p>
-        </div><br/>
+        </div>
         <div class="product__price">
           <p><strong>Features:</strong>  "Reliable support and maintenance for uninterrupted greenhouse operation." </p>
         </div>
